@@ -1,6 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.627 2006/03/23 02:11:17 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.628 2006/03/24 18:58:11 agaffney Exp $
+
+  24 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
+  src/GLIStorageDevice.py:
+  set disklabel to default for arch when clearing the partition table
+  src/templates/x86ArchitectureTemplate.py:
+  complete rewrite of first and second passes
 
   22 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIStorageDevice.py, src/templates/x86ArchitectureTemplate.py:
